--- a/public/css/style.css
+++ b/public/css/style.css
@@ -931,6 +931,40 @@ video {
   background-color: rgb(41 41 41 / var(--tw-bg-opacity));
 }
 
+ button.kotak {
+            width: 120px;
+            height: 5px;
+            border: none;
+            background-color: white;
+            font-family: 'Helvetica', sans-serif;
+            border-radius: 15px;
+            padding: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            position: relative;
+        }
+
+        button.kotak img {
+            max-width: 30%;
+            border-radius: 8px;
+            position: absolute;
+            top: 3px;
+            left: 10%;
+            right: 0;
+        }
+
+        button.kotak p {
+            margin-top: 10px;
+            font-weight: bold;
+            text-decoration: none;
+            color: black;
+            position: absolute;
+            top: 2%;
+            left: 19%;
+            right: 0;
+            font-size: 17px;
+        }
+
 .bg-secondaryBlue{
   --tw-bg-opacity: 1;
   background-color: rgb(101 125 247 / var(--tw-bg-opacity));
